# airhockeybot_gazebo_simulation

./: LICENSE
mechanical_design/common_cad_parts/print_models/: Basket_print.iam  Basket_print.stl  Bearing_sup_inside_print.iam  Bearing_sup_inside_print.stl  Bearing_sup_outside_print.iam  Bearing_sup_outside_print.stl  Cable_clamp_print.ipt.iam  Cable_clamp_print.stl  Chain_fixture_print.iam  Chain_support_print.iam  Emblem.stl  Emblem_script.stl  Fan_blend_print.iam  Fan_blend_print.stl  Fixture_lin_end_print.iam  Fixture_lin_end_print.stl  Fixture_lin_end_right_print.iam  Fixture_lin_end_right_print.stl  Fixture_lin_mid_print.iam  Fixture_lin_mid_print.stl  Fixture_lin_mid_right_print.iam  Fixture_lin_mid_right_print.stl  Fixture_mid_print.iam  Fixture_mid_print.stl  Fixture_mid_right_print.iam  Fixture_mid_right_print.stl  Fixture_motor_print.iam  Fixture_motor_print.stl  Fixture_motor_right_print.iam  Fixture_motor_right_print.stl  Globe_plug.stl  PCB_Case_Btm.stl  PCB_cover_print.iam  PCB_cover_print.stl  PowerS_cap_print.iam  PowerS_cap_print.stl  PowerS_case_print.iam  PowerS_case_print.stl  Reset_beam_print.iam  Reset_beam_print.stl  (+8 more)
mechanical_design/common_cad_parts/sim_models/: airhockeybot_plate_simulation_centered.iam  airhockeybot_plate_simulation_centered.stl  airhockeybot_table_simulation.iam  airhockeybot_table_simulation_centered.iam  airhockeybot_table_simulation_centered.stl  airhockeybot_x_traverse_collision_centered.iam  airhockeybot_x_traverse_only_collision_centered.stl  airhockeybot_x_traverse_simulation_centered.iam  airhockeybot_x_traverse_sumulation.iam  airhockeybot_y_simulation.iam  airhockeybot_y_simulation_centered.iam  basket_centered.iam  basket_centered.stl  logitech_C90_centered.stl  physical_props.txt  puk_centered.iam
mechanical_design/inventor/: Basket.ipt  Bat_claw.ipt  Bat_fixture.ipt  Bearing_support_inside.ipt  Bearing_support_outside.ipt  Belt_bridge.ipt  Belt_clamp.ipt  Belt_clamp_mirrored.ipt  Cable_clamp.ipt  Chain_drag.ipt  Chain_fixture.ipt  Chain_support.ipt  Corner.ipt  Distance_lin.ipt  Emblem.iam  Emblem.ipt  Emblem_mask.ipt  Emblem_script.ipt  Fan_blend.ipt  Fixture_linear_end.ipt  Fixture_linear_end_right.ipt  Fixture_linear_mid.ipt  Fixture_linear_mid_right.ipt  Fixture_mid.ipt  Fixture_mid_right.ipt  Fixture_motor.ipt  Fixture_motor_right.ipt  Globe_plug.ipt  Lin_gage.ipt  PCB_Case.iam  PCB_Case_Btm.ipt  PCB_Cover.ipt  PowerS.ipt  PowerS_cap.ipt  PowerS_case.ipt  Pulley.iam  Pusher.ipt  Reset_beam.ipt  Shaft_8mm.ipt  Shutter.ipt  (+19 more)
mechanical_design/inventor/Bearing 625ZZ/: 625ZZ.f3d  625ZZ.iges  625ZZ.ipt  625ZZ.step
mechanical_design/inventor/Bearing F688ZZ/: F688ZZ_Ball.SLDPRT  F688ZZ_Ball.ipt  F688ZZ_Housing.SLDPRT  F688ZZ_Housing.ipt  F688ZZ_assembly.SLDASM  F688ZZ_assembly.iam  F688ZZ_shaft.SLDPRT  F688ZZ_shaft.ipt
mechanical_design/inventor/Chain/: chain.iam  chain_elmt_1.ipt  chain_elmt_2.ipt  chain_end_elmt.ipt
mechanical_design/inventor/GT2 40T 5mm Bore 6mm wide pulley/: GT2 40T 5 Bore v2.iam  Pulley.ipt  Screw v1 (1).ipt  Screw v1.ipt
mechanical_design/inventor/GT2 40T 8mm Bore 6mm wide pulley/: GT2 40T 8 Bore v2.iam  GT2 40T 8 Bore v2.iges  GT2 40T 8 Bore v2.step  GT2 40T 8mm Bore.f3d  Pulley.ipt  Screw v1 (1).ipt  (+1 more)
src/airhockeybot_controller/: CMakeLists.txt  package.xml
src/airhockeybot_simulation/: README.md
src/airhockeybot_simulation/airhockeybot_description/: CMakeLists.txt  package.xml
src/airhockeybot_simulation/airhockeybot_description/launch/: airhockeybot_rviz.launch
src/airhockeybot_simulation/airhockeybot_description/meshes/: airhockeybot_corner_centered.stl  airhockeybot_multi_corner_centered.stl  airhockeybot_table_collision_centered.stl  master.dae  physical_props.txt  puk_centered.stl
src/airhockeybot_simulation/airhockeybot_description/rviz/: airhockeybot.rviz
src/airhockeybot_simulation/airhockeybot_description/urdf/: airhockeybot.gazebo.xacro  airhockeybot.xacro  macros.xacro  materials.xacro
src/airhockeybot_simulation/airhockeybot_gazebo/: CMakeLists.txt  package.xml
src/airhockeybot_simulation/airhockeybot_gazebo/config/: airhockeybot_position_controller.yaml  control_params.yaml
src/airhockeybot_simulation/airhockeybot_gazebo/launch/: airhockeybot_gazebo.launch  position_controller.launch
src/airhockeybot_simulation/airhockeybot_gazebo/media/materials/scripts/: plate.material
src/airhockeybot_simulation/airhockeybot_gazebo/model/bat/meshes/: puk_centered.dae
src/airhockeybot_simulation/airhockeybot_gazebo/worlds/: empty.world
src/airhockeybot_simulation/airhockeybot_simulation/: CMakeLists.txt  package.xml
(+254 files in other folders)
