<package>
  <name>airhockeybot_description</name>
  <version>0.0.1</version>
  <description>Airhockeybot robot description. </description>
  <author email="nicolas.frick@informatik.uni-hamburg.de">Nico</author>
  <maintainer email="nicolas.frick@informatik.uni-hamburg.de">Nico</maintainer>
  <license>MIT</license>
  <url>todo.org</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>