<?xml version="1.0"?>
<package format="2">
  <name>airhockeybot_simulation</name>
  <version>0.0.1</version>
  <description>
    Simulation package for the airhockeybot.
  </description>
  <license>MIT</license>
  <author email="nicolas.frick@studium.uni-hamburg.de">Nico</author>
  <maintainer email="nicolas.frick@studium.uni-hamburg.de">Nico</maintainer>
  <url type="repository">git@gitlab.com:projectir/airhockeybot.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>airhockeybot_description</exec_depend>
  <exec_depend>airhockeybot_gazebo</exec_depend>
  <export><metapackage/></export>
</package>